<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/tip_login"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <LinearLayout
        android:id="@+id/ll_login"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            style="@style/moon_menu"
            android:text="@string/title_login"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/et_account"
            style="@style/moon_edit"
            android:hint="@string/hit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_password"
            style="@style/moon_edit"
            android:hint="@string/hit_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/btn_login"
            style="@style/moon_button"
            android:layout_marginTop="50dp"
            android:text="@string/btn_login"
            android:onClick="onClick"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="55dp" />

        <TextView
            android:id="@+id/tv_regist"
            android:text="新用户注册"
            android:textColor="@color/major"
            android:gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</FrameLayout>
